--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render 'layouts/navbar' %>
+
   <% flash.each do |type, message| %>
   <%= content_tag :div, message, class: "flash_#{type}"%>
   <% end %>
@@ -19,6 +21,10 @@
     <strong>Newest tool:</strong> <%= most_recent_tool.name %>
     <% end %>
   </p>
+
+  <% if current_user %>
+   Welcome, <%= current_user.name %>
+ <% end %>
 
   <%= yield %>
 
