--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,6 +1,7 @@
 <h1> All Tools </h1>
 
 <%= link_to "Create New Tool", new_tool_path %>
+<!-- <%= link_to "Your Tool Chest", 'tools/user/:user_id(current_user)' %> -->
 
 <% @tools.each do |tool| %>
   <p> <%= link_to "#{tool.name}", tool_path(tool.id) %>
